# link-shortener

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  nginx.example.conf  pyproject.toml
.github/workflows/: ci.yml
app/: config.py  db.py  main.py  shortcode.py
app/static/: app.js  style.css
app/templates/: 404.html  admin.html  base.html  index.html
tests/: conftest.py  test_app.py  test_config.py  test_db.py  test_shortcode.py
